# drozer-lite

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  profiles.json  pyproject.toml
.claude/skills/drozer-lite/: SKILL.md
.claude/skills/drozer-lite/checklists/: gaming.md  governance.md  oracle.md  signature.md  solana.md  stableswap.md  universal.md
benchmark/: README.md  baseline.json  run.sh
checklists/: cross-chain.md  dex.md  governance.md  icp.md  lending.md  math.md  reentrancy.md  signature.md  universal.md  vault.md
drozer_lite/: __init__.py  audit.py  benchmark.py  checklist.py  cli.py  dedup.py  detect.py  fixtures.py  llm.py  prompt.py  validate.py  vocab.py
drozer_lite/adapters/: __init__.py  forefy.py  json.py  markdown.py  sarif.py
drozer_lite/schemas/: native.json
examples/: README.md
examples/fixtures/: expectations.json
examples/fixtures/cross-chain/: clean.sol  vulnerable.sol
examples/fixtures/dex/: clean.sol  vulnerable.sol
examples/fixtures/gaming/: clean.sol  vulnerable.sol
examples/fixtures/governance/: clean.sol  vulnerable.sol
examples/fixtures/lending/: clean.sol
examples/fixtures/oracle/: vulnerable.sol
examples/fixtures/signature/: clean.sol
examples/fixtures/vault/: vulnerable.sol
scripts/: run-real-benchmark.sh
skills/: drozer-lite.md
tests/: test_adapters.py  test_audit.py  test_benchmark.py  test_checklist.py  test_cli_smoke.py  test_dedup.py  test_detect.py  test_fixtures.py  test_prompt.py  test_validate.py  test_vocab.py
tests/fixtures/lending/: vulnerable.sol
tests/fixtures/math/: clean.sol  vulnerable.sol
tests/fixtures/oracle/: clean.sol
tests/fixtures/reentrancy/: clean.sol  vulnerable.sol
tests/fixtures/signature/: vulnerable.sol
tests/fixtures/universal/: clean.sol  vulnerable.sol
tests/fixtures/vault/: clean.sol
